fixed icon spacing not happening when disabled, switched back to flex

--- a/resources/sass/elements/_folders.scss
+++ b/resources/sass/elements/_folders.scss
@@ -47,13 +47,11 @@
         -o-transition: max-height 50ms linear;
         transition: max-height 50ms linear;
         z-index: -999;
-        grid-column: span 4;
 
         &.open {
             max-height: 1000px;
             z-index: unset;
             animation: opacity 50ms forwards;
-
 
             &.shop {
                 max-height: unset;
@@ -85,7 +83,7 @@
             margin-bottom: 0;
         }
 
-        .icons_wrap {
+        /*.icons_wrap {
             display: grid;
             --n: 4 !important;
             grid-template-columns: repeat(auto-fill, minmax(max(50px, 100% / var(--n)), 1fr)) !important;
@@ -95,11 +93,7 @@
             -webkit-transition: 800ms all ease-in-out;
             -moz-transition: 800ms all ease-in-out;
             -o-transition: 800ms all ease-in-out;
-
-            .icon_col {
-                width: 90%;
-            }
-        }
+        }*/
 
         .icons_wrap, .folder_content {
             padding: 20px !important;
@@ -121,6 +115,20 @@
                 ul, ol {
                     list-style: revert-layer;
                     padding-left: 30px;
+                }
+            }
+
+            .icon_col {
+                width: 26.3% !important;
+                margin-bottom: 5px !important;
+                margin-right: 10.5% !important;
+
+                &:nth-child(3n) {
+                    margin-right: 0 !important;
+                }
+
+                &:nth-child(4n) {
+                    margin-right: 10.5% !important;
                 }
             }
         }
