--- a/resources/sass/elements/_links.scss
+++ b/resources/sass/elements/_links.scss
@@ -194,29 +194,19 @@
 
     .icons_wrap {
         position: relative;
-        display: grid;
-        --n:5;
-        grid-template-columns: repeat(auto-fill, minmax(max(50px,100%/var(--n)), 1fr));
-        grid-gap: 5px 10px;
-        padding: 40px 5% 0;
-        transition: 800ms all ease-in-out;
-        -webkit-transition: 800ms all ease-in-out;
-        -moz-transition: 800ms all ease-in-out;
-        -o-transition: 800ms all ease-in-out;
-
-        @include query(smallMobile) {
-            --n:5;
-            grid-template-columns: repeat(auto-fill, minmax(max(30px,100%/var(--n)), 1fr));
-        }
-
-        .icon_col {
-            width: 100%;
-            position: relative;
-        }
-
-        &.folder {
-            --n:4;
-        }
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+        flex-direction: row;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        -webkit-justify-content: flex-start;
+        align-items: stretch;
+        -webkit-align-items: stretch;
 
         &.icon_select {
             display: flex;
@@ -224,6 +214,7 @@
 
         .icon_col {
             @include boxShadow;
+            width: 23%;
             border-radius: 20px;
             -webkit-border-radius: 20px;
             -moz-border-radius: 20px;
@@ -469,6 +460,29 @@
         }
 
         &.add_icons {
+            display: grid;
+            --n:5;
+            grid-template-columns: repeat(auto-fill, minmax(max(50px,100%/var(--n)), 1fr));
+            grid-gap: 20px;
+            padding: 40px 5% 0;
+            transition: 800ms all ease-in-out;
+            -webkit-transition: 800ms all ease-in-out;
+            -moz-transition: 800ms all ease-in-out;
+            -o-transition: 800ms all ease-in-out;
+
+
+            @media all and (max-width: 1199px) {
+                grid-gap: 15px;
+            }
+
+            @media all and (max-width: 768px) {
+                grid-gap: 10px;
+            }
+
+            .icon_col {
+                width: 100%;
+                position: relative;
+            }
 
             &.no_icons {
                 display: -webkit-box;
@@ -485,6 +499,11 @@
                 align-content: center;
                 -webkit-align-content: center;
                 padding-top: 50px;
+            }
+
+            &.folder {
+                --n:4;
+                grid-template-columns: repeat(auto-fill, minmax(max(50px,100%/var(--n)), 1fr));
             }
 
             &#layout_two {
@@ -591,6 +610,14 @@
                                         max-width: 2rem;
                                     }
                                 }
+                            }
+                        }
+
+                        &.folder {
+                            .link_content {
+                                width: 20%;
+                                justify-content: flex-end;
+                                -webkit-justify-content: flex-end;
                             }
                         }
 
@@ -713,11 +740,10 @@
             grid-auto-flow: row dense;
         }
 
-        &.folder {
-            .edit_form {
-                grid-column: span 3;
-            }
+        &.folder .edit_form {
+            grid-column: span 3;
         }
+
     }
 }
 
